<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wine.WineActivity">

    <ImageView
        android:id="@+id/frigdeImage2"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginTop="-2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/winebackground" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="414dp"
        android:layout_height="221dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/wineTvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blur" />

    <ImageButton
        android:id="@+id/back2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wineTvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="123dp"
        android:text="@string/wineTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/frigdeImage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/greek"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:text="@string/wineHeader1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/frigdeImage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wineTvTitle"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/nameOfFoodForWine"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxdark"
        android:ems="10"
        android:hint="@string/wineHint"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/searchWine"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frigdeImage2" />

    <ImageView
        android:id="@+id/searchWine"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/greek"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/lupa" />

    <ImageView
        android:id="@+id/winePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nameOfFoodForWine"
        app:layout_constraintTop_toBottomOf="@+id/searchWine"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/indian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="Paired Wines:"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nameOfFoodForWine"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfFoodForWine" />

    <TextView
        android:id="@+id/tvPairedWines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/indian"
        app:layout_constraintTop_toBottomOf="@+id/indian" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/winePhoto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/japanese"
        app:layout_constraintTop_toBottomOf="@+id/tvPairedWines" />

    <TextView
        android:id="@+id/japanese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Description:"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvPairedWines"
        app:layout_constraintTop_toBottomOf="@+id/tvPairedWines" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Product match:"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/nordic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Average price:"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvProductMatch"
        app:layout_constraintTop_toBottomOf="@+id/tvProductMatch" />

    <TextView
        android:id="@+id/tvAveragePrize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/nordic"
        app:layout_constraintTop_toBottomOf="@+id/nordic" />

    <TextView
        android:id="@+id/tvProductMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ProgressBar
        android:id="@+id/progressBarWines"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="#000"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="@+id/nameOfFoodForWine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>